[gd_scene load_steps=2 format=3 uid="uid://clp6wcsilarnp"]

[ext_resource type="Script" uid="uid://dp4pre20e5lr1" path="res://scenes/ui/main_menu/main_menu.gd" id="1_1ch07"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1ch07")

[node name="Page" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Page/Header"]
layout_mode = 2
text = "❤️‍🔥 MusikMon 🪗
📇 Hauptmenü 📇"
horizontal_alignment = 1

[node name="Content" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Footer" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonSet" type="VBoxContainer" parent="Page/Footer"]
layout_mode = 2
alignment = 1

[node name="Options" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "⚙️ Optionen"

[node name="Monpedia" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "📒 MusikMon-Pedia"

[node name="Adventure" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "🗺️ Adventure-Modus"

[node name="Idle" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "♾️ QwisIdle-Modus"

[connection signal="pressed" from="Page/Footer/ButtonSet/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Page/Footer/ButtonSet/Monpedia" to="." method="_on_monpedia_pressed"]
[connection signal="pressed" from="Page/Footer/ButtonSet/Adventure" to="." method="_on_adventure_pressed"]
[connection signal="pressed" from="Page/Footer/ButtonSet/Idle" to="." method="_on_idle_pressed"]
